--- a/index.htm
+++ b/index.htm
@@ -15,5 +15,6 @@
 	<h1>Nguyễn Hữu Sĩ</h1>
 	<p>This is me</p>
 	<img src="images/image_1.jpg" alt="image_git" style="width: auto;">
+	<img src="images/image_1.jpg" alt="image_git" style="width: auto;">
 </body>
 </html>
