--- a/index.htm
+++ b/index.htm
@@ -8,11 +8,14 @@
 	<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-	<img src="images/image_1.jpg" alt="">
-	<img src="images/image_1.jpg" alt="UTF-8" style="width: auto;">
-	<img src="images/image_1.jpg" alt="UTF-8" style="width: auto; height: auto;">
+
+	<p>This is the first file in my new Git Repo.</p>
+	<p>This line is here to show how merging works.</p>	<img src="images/image_2.jpg" alt="Hello" style="width: 100%; max-width: 640px;">
+	<p>This is the first file in my new Git Repo.</p>
 	<img src="images/image_2.jpg" alt="Hello" style="width: 100%; max-width: 640px;">
 	<p>This is the first file in my new Git Repo.</p>
+	<p>This line is here to show how merging works.</p>
+		<p>This is the first file in my new Git Repo.</p>
 	<img src="images/image_2.jpg" alt="Hello" style="width: 100%; max-width: 640px;">
 	<p>This is the first file in my new Git Repo.</p>
 	<p>This line is here to show how merging works.</p>	<img src="images/image_2.jpg" alt="Hello" style="width: 100%; max-width: 640px;">
